# grasp

./: .bzrignore  CHANGELOG.md  CHANGES  LICENSE  MANIFEST.in  README  apropos.py  grasp.py  pygist.py  pyproject.toml  setup.py  test_apropos.py  test_pygist.py
grasp/: __init__.py  grasp.py  magic.py
grasp/test/: test_grasp.py  test_magic.ipy
